--- a/index.html
+++ b/index.html
@@ -62,15 +62,20 @@
       <svg class="cover" id="cover" viewBox="0 0 500 300" xmlns="http://www.w3.org/2000/svg">
         <path d="M 0 0 L 500 0 L 275 150 Q 250 175 225 150 L 0 0 Z" />
       </svg>
-      <div class="letterSheet" id="letterSheet">
-        <div class="close-button" id="close-button">&times;</div>
-        <h2 class="letterSheet__title" id="title"></h2>
-        <p class="letterSheet__text" id="message"></p>
-        <div id="countdown-container">
-          <p>Te sigo pensando desde el primer instante que te vi...</p>
-          <div id="countdown"></div>
+        <div class="letterSheet" id="letterSheet">
+          <div class="close-button" id="close-button">&times;</div>
+          <h2 class="letterSheet__title" id="title"></h2>
+          <p class="letterSheet__text" id="message"></p>
+          
+          <div id="message-image-container">
+            <img id="message-image" src="saturo.jpg" alt="Gojo Satoru de Jujutsu Kaisen">
+          </div>
+          
+          <div id="countdown-container">
+            <p>Te sigo pensando desde el primer instante que te vi...</p>
+            <div id="countdown"></div>
+          </div>
         </div>
-      </div>
     </div>
     <svg class="clickHere" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path
